
syntax = "proto3";

package qrtz_paused_trigger_grps;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


message QrtzPausedTriggerGrpsBean {

    string sched_name=1;
    string trigger_group=2;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service QrtzPausedTriggerGrpsBeanService {
  rpc ListQrtzPausedTriggerGrpsBeans(ListQrtzPausedTriggerGrpsBeansRequest) returns (ListQrtzPausedTriggerGrpsBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/QrtzPausedTriggerGrpsBeans"
    };
  }

  rpc GetQrtzPausedTriggerGrpsBean(GetQrtzPausedTriggerGrpsBeanRequest) returns (QrtzPausedTriggerGrpsBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=QrtzPausedTriggerGrpsBeans/*}"
    };
  }

  rpc CreateQrtzPausedTriggerGrpsBean(CreateQrtzPausedTriggerGrpsBeanRequest) returns (QrtzPausedTriggerGrpsBean) {
    option (google.api.http) = {
      post: "/v1alpha1/QrtzPausedTriggerGrpsBeans"
      body: "QrtzPausedTriggerGrpsBean"
    };
  }

  rpc UpdateQrtzPausedTriggerGrpsBean(UpdateQrtzPausedTriggerGrpsBeanRequest) returns (QrtzPausedTriggerGrpsBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{QrtzPausedTriggerGrpsBean.name=QrtzPausedTriggerGrpsBeans/*}"
      body: "QrtzPausedTriggerGrpsBean"
    };
  }

  rpc DeleteQrtzPausedTriggerGrpsBean(DeleteQrtzPausedTriggerGrpsBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=QrtzPausedTriggerGrpsBeans/*}"
    };
  }
}

// message QrtzPausedTriggerGrpsBean {
// ! This should be defined elsewhere
// }

message ListQrtzPausedTriggerGrpsBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListQrtzPausedTriggerGrpsBeansResponse {
  // The field name should match the noun "QrtzPausedTriggerGrpsBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated QrtzPausedTriggerGrpsBean QrtzPausedTriggerGrpsBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetQrtzPausedTriggerGrpsBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateQrtzPausedTriggerGrpsBeanRequest {
  // The parent resource name where the QrtzPausedTriggerGrpsBean is to be created.
  string parent = 1;

  // The QrtzPausedTriggerGrpsBean id to use for this QrtzPausedTriggerGrpsBean.
  string QrtzPausedTriggerGrpsBean_id = 2;

  // The QrtzPausedTriggerGrpsBean resource to create.
  // The field name should match the Noun in the method name.
  QrtzPausedTriggerGrpsBean QrtzPausedTriggerGrpsBean = 3;
}

message UpdateQrtzPausedTriggerGrpsBeanRequest {
  // The QrtzPausedTriggerGrpsBean resource which replaces the resource on the server.
  QrtzPausedTriggerGrpsBean QrtzPausedTriggerGrpsBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteQrtzPausedTriggerGrpsBeanRequest {
  // The resource name of the QrtzPausedTriggerGrpsBean to be deleted.
  string name = 1;
}
